libutf8 (1.0.15.0~bionic) bionic; urgency=high

  * Moved find() of doxygen in the doc/CMakeLists.txt file.
  * Changed the NOT_A_CHARACTER value to -2 to distinguish it from EOS.
  * Made utf8_iterator::operator * return NOT_A_CHARACTER on an error.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 20 Nov 2022 09:00:37 -0800

libutf8 (1.0.14.0~bionic) bionic; urgency=high

  * Added operator+ for char32_t/string where string is viewed as UTF-8.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 30 Oct 2022 21:24:12 -0700

libutf8 (1.0.13.0~bionic) bionic; urgency=high

  * Added a verify_file_inheritance() in tools.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 11 Jul 2022 07:42:16 -0700

libutf8 (1.0.12.1~bionic) bionic; urgency=high

  * Updated the compat to v10.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 19 May 2022 20:28:28 -0700

libutf8 (1.0.12.0~bionic) bionic; urgency=high

  * Cleane up the cmake file.

 -- Alexis Wilke <alexis@m2osw.com>  Thu, 19 May 2022 18:09:49 -0700

libutf8 (1.0.11.2~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Fri, 04 Mar 2022 22:36:44 -0800

libutf8 (1.0.11.1~bionic) bionic; urgency=high

  * Bumped build version to rebuild on Launchpad.

 -- Alexis Wilke <alexis@m2osw.com>  Sun, 13 Feb 2022 12:35:15 -0800

libutf8 (1.0.11.0~bionic) bionic; urgency=high

  * Added a clear() for the good flag in the utf8_iterator.
  * Fixed the string test, the exception now include "libutf8_exception: ".
  * Correctly test the good flag status in cases were the iterator fails.

 -- Alexis Wilke <alexis@m2osw.com>  Mon, 27 Sep 2021 18:08:13 -0700

libutf8 (1.0.10.0~bionic) bionic; urgency=high

  * Updated the tests to match the new libexcept library setup.

 -- Alexis Wilke <alexis@m2osw.com>  Sat, 28 Aug 2021 18:23:57 -0700

libutf8 (1.0.9.0~bionic) bionic; urgency=high

  * Slowly adding Unicode to canonicalize UTF-8 strings.